# agent-village

./: AGENTS.md  pyproject.toml  requirements-dev.txt
.github/workflows/: heartbeat.yml  operator-execute-01.yml  tests.yml  village-heartbeat.yml  worker-proof-01.yml
docs/: ARCHITECTURE_VISION.md  BEFUND.md  MOLTBOOK_CONTRACT_NOTES.md  SPEC.md  STATE_OWNERSHIP.md  VALUE_MODEL.md
scripts/: bounty_review_cli.py  operator_execute.py  worker_proof_01.py
tests/: test_actor_identity.py  test_atomic_save.py  test_bounty_contracts.py  test_bounty_gate.py  test_bounty_review.py  test_bounty_review_automatic.py  test_brain_gate.py  test_brain_is_actionable.py  test_canonical_events.py  test_contracts.py  test_contribution_dedup.py  test_deepseek_provider.py  test_duplicate_content_verify.py  test_evaluator.py  test_execution_orchestrator.py  test_external_bounty_lifecycle_01a.py  test_final_evaluation.py  test_heartbeat_verify.py  test_interpreter.py  test_keyword_matching.py  test_moltbook_captcha.py  test_name_sanitizing.py  test_operator_execute_script.py  test_operator_proof_budget.py  test_operator_target_path.py  test_pending_confirmation.py  test_type_safety.py  test_work_result.py  test_worker.py  test_worker_no_write_authority.py  test_worker_proof_script.py
village/: _types.py  bounty_review.py  brain.py  cognitive_provider.py  contracts.py  deepseek_provider.py  evaluator.py  execution_orchestrator.py  final_evaluation.py  heartbeat.py  interpreter.py  moltbook_captcha.py  nadi_bridge.py  submission_bindings.py  village_core.py  work_result.py  worker.py
(+31 files in other folders)
