[project]
name = "agent-village"
version = "0.1.0"
description = "Agent Village — federated cognitive-worker platform"
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.18",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed longer lines for readable assertions and inline data.
# The user explicitly allows tests to be treated more leniently than
# village/ and scripts/.
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
ignore_missing_imports = true

# Incremental strictness — real type errors caught without mass refactoring.
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
# disallow_any_generics = true  — DEFERRED: see §"Bare generics" in TYPE_SAFETY_FOUNDATION_01.md
disallow_any_generics = false

# NOT enabled yet (future steps — see TYPE_SAFETY_FOUNDATION_01.md):
# disallow_any_explicit = true
# disallow_untyped_defs = true
# strict = true

# Tests: more permissive than production code but still checked.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_generics = false
warn_return_any = false
